deploy/manifests/envoy-proxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
