deploy/manifests/kube-vip-api-vip.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip-ds
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: kube-vip
  template:
    metadata:
      labels:
        app: kube-vip
    spec:
      hostNetwork: true
      serviceAccountName: kube-vip
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - name: kube-vip
          image: ghcr.io/kube-vip/kube-vip:v0.8.3
          imagePullPolicy: IfNotPresent
          args:
            - manager
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "NET_RAW", "SYS_TIME"]
      terminationGracePeriodSeconds: 5
